--- a/src/components/ImageBlock/style.css
+++ b/src/components/ImageBlock/style.css
@@ -1,8 +1,10 @@
-.paragraph {
+.card__image {
+    height: 200px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 50px;
 }
